Basic Account Support - API Currently in beta (request format will change). - Needs to manage dirty state better. - Traits need to be consolidated, and interfaces added:   - Traits should not assume properties / methods from other traits (use abstract methods if needed)   - Entities should obviously expect requests / responses based on interfaces

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,4 +4,9 @@
             <directory>./test/</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist>
+            <directory suffix=".php">./src/</directory>
+        </whitelist>
+    </filter>
 </phpunit>
